# libtaos-rs

./: Cargo.toml  README.md
.ci/: test.sh
.github/workflows/: aarch64.yml
examples/: demo.rs
src/: client.rs  error.rs  field.rs  lib.rs  rest.rs  schemaless.rs  stmt.rs  test.rs  util.rs
src/stmt/: bind.rs
src/util/: into_c_str.rs
tests/: builder.rs  describe.rs  errors.rs  init.rs  quote.rs  sml.rs
